2010-01-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	When a landscape fullscreen window is mapped in portrait,
	set its geometry to 800x480 straight away, like we do to
	non-fullscreen windows.

	* matchbox/core/mb-window-manager.h (mb_wm_get_display_geometry)
	* matchbox/core/mb-window-manager.c (mb_wm_get_display_geometry):
	  Take an additional @use_layout_flag parameter whether to take
	  MBWindowManagerFlagLayoutRotated into account if it's set.
	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_update):
	  Use it, for layout_fullscreen() as well.
	* matchbox/client-types/mb-wm-client-dialog.c (mb_wm_client_dialog_init):
	  Update.

2010-01-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.85

2010-01-12  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere for NB#126488.

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_display_sync):
	Use 'fullscreen' variable instead of 'client->xwin_frame' also in the
	case when the window is unmapped/iconified.

2010-01-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Rotate early on when a new client is mapped which doesn't like
	the current orientation.  This is to make the transition smoother.

	* matchbox/comp-mgr/mb-wm-comp-mgr.h
	* matchbox/comp-mgr/mb-wm-comp-mgr.c:
	  Added the "activate" parameter to MBWMCompMgr::register_client()
	  to know whether the client should be activated or not (because
	  we're starting to manage preexisting clients) and changed its
	  semantics to do activate the client if it needs to be.
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
	  Updated for that.
	* matchbox/core/mb-window-manager.h:
	  Removed the MBWindowManagerSignalPortraitForecast signal.
	* matchbox/core/mb-window-manager.c (mb_wm_manage_client):
	  Leave it up to MBWMCompMgr::register_client() to activate
	  the client.
	* matchbox/core/mb-wm-types.h
	* matchbox/core/mb-wm-atoms.c:
	  Added the _HILDON_PORTRAIT_MODE_SUPPORT atom.
	* matchbox/core/mb-wm-client-window.h